--- a/loanmanagement/requirements.txt
+++ b/loanmanagement/requirements.txt
@@ -4,6 +4,6 @@ django-filter==2.2.0
 djangorestframework==3.10.3
 Markdown==3.1.1
 nepali-date==2.0.2
+Pillow==6.2.1
 pytz==2019.3
 sqlparse==0.3.0
-
