--- a/View/config/nginx-sample.conf
+++ b/View/config/nginx-sample.conf
@@ -56,7 +56,7 @@ http {
 
         # proxy the PHP scripts to Apache listening on 127.0.0.1:80
         #
-        location ~ \api {
+        location /api {
             proxy_pass   http://127.0.0.1:8000;
         }
 
