--- a/view/react1/package.json
+++ b/view/react1/package.json
@@ -1,11 +1,13 @@
 {
-  "name": "view",
+  "name": "react1",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.4.0",
-    "@testing-library/user-event": "^7.1.2",
+    "@testing-library/user-event": "^7.2.0",
+    "axios": "^0.19.0",
+    "node-sass": "^4.13.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-scripts": "3.3.0"
@@ -30,14 +32,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "devDependencies": {
-    "css-loader": "^3.3.2",
-    "node-sass": "^4.13.0",
-    "style-loader": "^1.0.1"
-  },
-  "description": "This project was bootstrapped with [Create React App](https://github.com/facebook/create-react-app).",
-  "main": "index.js",
-  "author": "",
-  "license": "ISC"
+  }
 }
