--- a/loanmanagement/requirements.txt
+++ b/loanmanagement/requirements.txt
@@ -1,19 +1,18 @@
 asgiref==3.2.3
-certifi==2019.11.28
-chardet==3.0.4
 Django==3.0
 django-filter==2.2.0
 djangorestframework==3.10.3
-idna==2.8
+html5lib==1.0.1
 Markdown==3.1.1
 nepali-date==2.0.2
 numpy==1.17.4
-panda==0.3.1
 pandas==0.25.3
 Pillow==6.2.1
+PyPDF2==1.26.0
 python-dateutil==2.8.1
 pytz==2019.3
-requests==2.22.0
+reportlab==3.5.32
 six==1.13.0
 sqlparse==0.3.0
-urllib3==1.25.7
+webencodings==0.5.1
+xhtml2pdf==0.2.3
